fix: chord segments
